app/assets/stylesheets/pages/_profile.scss
.profile-page {
  text-align: center;
  margin-bottom: 50px;
}

.background-with-image {
  position: relative;
  height: 250px;
  background-size: cover;
}

#profile-image {
  width: 200px;
  height: 200px;
  border-radius: 50%;
  object-fit: cover;
  position: absolute;
  bottom: -100px;
  left: calc(50% - 100px);
  box-shadow: 5px 2px 5px rgba(0,0,0,0.2);
}

.info-profile {
  width: 45%;
  margin: 120px auto 0;
}

.btn-edit-profile {
  position: absolute;
  top: 20px;
  left: 30px;
  &:hover {
    background-color: rgba(220, 220, 220, 0.2);
  }
}

.photo-game-profile {
  margin-bottom: 65px;
  box-shadow: 8px 8px 12px rgba(0,0,0,0.2);
  a {
    display: block;
    height: 100%;
    width: 100%;
  };
  &:hover {
    opacity: 0.7;
  };
}

.info-games-profile {
  padding: 75px;
}

.nb-likes-or-dislikes {
  background-color: rgba(11,83,81,0.1);
  font-weight: bold;
  font-size: 36px;
  box-shadow: 1px 1px 1px rgba(200,200,200,0.3);
}

.row-with-likes-and-dislikes {
  display: flex;
  justify-content: center;
  align-items: center;
}

.last-games-played {
  background-color: rgba(11,83,81,0.1);
}

.profile-row {
  padding: 50px;
  h2 {
    margin: -20px 0 50px 0;
    font-weight: bold;
  }
}

